interpolating json data

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,13 @@
-<div class="jumbo">
-  <div class="right tomser"></div>
+<Jumbo>
   <h2>Welcome to my fucking tutorial</h2>
   <p>Hope you find what you're looking for pussy.</p>
+  <LinkTo @route="about" class="button">About</LinkTo>
+</Jumbo>
+<div class="rentals">
+  <ul class="results">
+    {{#each @model as |rental|}}
+      <li><Rental @rental={{rental}} /></li>
+      {{/each}}
+  </ul>
 </div>
+
