--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,5 +1,5 @@
-<div class="jumbo">
-  <div class="right tomser"></div>
+<Jumbo>
   <h2>Welcome to my fucking about page</h2>
   <p>Hope you find what you're looking for about me pussy.</p>
-</div>
+  <LinkTo @route="contact" class="button">Contact</LinkTo>
+</Jumbo>
